--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantum Privacy Policy</title>
+    <title>Gutargoo Privacy Policy</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Quantum Privacy Policy</h1>
+            <h1>Gutargoo Privacy Policy</h1>
             <nav>
                 <a href="#about">About</a>
                 <a href="#information">Information Use</a>
